@@ -1,7 +1,7 @@
 <!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook V4.1//EN" [
      <!ENTITY ztest-options SYSTEM "ztest-options.xml">
 ]>
-<!-- $Id: yaz-ztest-man.xml,v 1.2 2003-11-25 19:46:18 adam Exp $ -->
+<!-- $Id: yaz-ztest-man.xml,v 1.3 2004-01-17 01:20:12 adam Exp $ -->
 <refentry id="yaz-ztest">
  
  <refmeta>
@@ -29,7 +29,8 @@
    <arg choice="opt"><option>-k <replaceable>kilobytes</replaceable></option></arg>
    <arg choice="opt"><option>-d <replaceable>daemon</replaceable></option></arg>
    <arg choice="opt"><option>-w <replaceable>dir</replaceable></option></arg>
-   <arg choice="opt"><option>-ziST1</option></arg>
+   <arg choice="opt"><option>-p <replaceable>pidfile</replaceable></option></arg>
+   <arg choice="opt"><option>-ziDST1</option></arg>
    <arg choice="opt" rep="repeat">listener-spec</arg>
   </cmdsynopsis>
 
